--- a/cart-style.css
+++ b/cart-style.css
@@ -15,6 +15,7 @@ header{
 header .shopping{
     position: relative;
     text-align: right;
+    margin-top: 10px;
 }
 header .shopping img{
     width: 40px;
@@ -28,7 +29,7 @@ header .shopping span{
     color: #fff;
     position: absolute;
     top: -5px;
-    left: 80%;
+    left: 93.5%;
     padding: 3px 10px;
 }
 .list{
